--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="Contents/Css/font-awesome.min.css" rel="stylesheet" />
     <link href="Contents/Css/datepicker3.css" rel="stylesheet" />
     <link href="Contents/Css/styles.css" rel="stylesheet" />
-    <link href="Css/Style.css" rel="stylesheet" />
-    <link href="Css/alertify.min.css" rel="stylesheet" />
+    <link href="Csss/Style.css" rel="stylesheet" />
+    <link href="Csss/alertify.min.css" rel="stylesheet" />
 	<link href="Contents/Css/style.css" rel="stylesheet" />
     <script src="Contents/Scripts/jquery-3.2.1.min.js"></script>
     <script src="Contents/Scripts/bootstrap.min.js"></script>
