--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="col-md-12 hover" v-for="camera in cameras">
               <li v-if="camera.id == activeCameraId" :title="formatName(camera.name)" style="color:white;" ><i class="fa fa-camera"></i> {{ formatName(camera.name) }}</li>
               <li v-if="camera.id != activeCameraId" :title="formatName(camera.name)">
-               <i class="fa fa-camera"></i> <a @@click.stop="selectCamera(camera)">{{ formatName(camera.name) }}</a>
+               <i class="fa fa-camera"></i> <a @click.stop="selectCamera(camera)">{{ formatName(camera.name) }}</a>
               </li>
             </div>
             <hr />
